--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
